# github-agent

./: .env_example  .gitignore  README.md  pyproject.toml  requirements.txt  run.py
app/: app_gradio.py  run_gradio.py
gradio_output/: analysis_results.json
scripts/: demo.py  test_analysis.py  test_github_cloning.py
src/: __init__.py
src/core/: __init__.py  agent.py  analyzer.py  comparator.py  document_reader.py  generator.py  summarizer.py
src/utils/: llm.py  templates.py
